firefox: table had a fix height and when there was one room, the lobby looked awful - same with players inside room
The dice got too low, so i pushed it higher up with a minus margin for top

--- a/src/main/webapp/css/room.css
+++ b/src/main/webapp/css/room.css
@@ -13,7 +13,6 @@ table#playerList {
 	width: 600px;
 }
 tbody {
-	height: 400px;
 	overflow: auto;
 }
 
